Fixed alignment

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,7 @@ input[type="file"] {
   position: absolute;
   top: 50%;
   left: 55%;
+  width: 100%;
   transform: translate(-50%, -50%);
 }
 
